# object_detection

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: colab_submission.ipynb  eda.ipynb
object_detection/: __init__.py  config.py  metric.py  plot.py
object_detection/configs/: train_yolo.yaml
object_detection/data_preprocessing/: convert.py  split.py
object_detection/modeling/: train_yolo.py
reports/: metrics_table.md  metrics_yolo11m_indoor.json
reports/yolo_runs/yolo11m_indoor/: args.yaml  results.csv
