[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "object_detection"
version = "0.0.1"
description = "Object detection for indoor objects"
authors = [
  { name = "Anshu Garg" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipykernel>=7.3.0",
    "iterative-stratification>=0.1.9",
    "loguru",
    "matplotlib>=3.10.9",
    "mkdocs",
    "numpy>=2.2.6",
    "pip",
    "python-dotenv",
    "ruff",
    "supervision>=0.29.1",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm",
    "typer",
    "ultralytics>=8.4.87",
]
requires-python = ">=3.10.0"


[tool.ruff]
line-length = 99
src = ["object_detection"]
include = ["pyproject.toml", "object_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["object_detection"]
force-sort-within-sections = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]

